@@ -109,49 +109,54 @@
 					<div>Total number of reported budgets across all activities</div>
 				</td>
 			</tr>
-		</table>	
-		<table class="pub dataset">
-			<tr>
-				<th>IATI Registry Datasets <span class="note">Links open new window</span></th>
-				<th>Activities</th>
-			</tr>
-			{dash_list_slug_datas}
 		</table>
-		<span id="country_list"></span>
-		<table class="quality">
-			<tr>
-				<td>
-					<table class="country_data">
-						<tr>
-							<td>
-								<div class="country_title">Total recipient countries</div>
-								<div class="country_title">Total <i class="invalid">invalid</i> recipients</div>
-								<div class="country_title"><i class="invalid">Invalid</i> recipients percentage</div>
-								<div class="note div">Links below to XML open new window</div>
-							</td>
-							<td>
-								<div class="country_title">{dash_quality_country_count}</div>
-								<div class="country_title">{dash_quality_country_total_invalid}</div>
-								<div class="country_title">{dash_quality_country_total_invalid_pct}%</div>
-							</td>
-						</tr>
-						<tr>
-							<th>Country Code</th>
-							<th>Activities</th>
-						</tr>
-						{dash_list_country_datas}
-					</table>
-				</td>
-			</tr>
-		</table>
+		<div class="default more_data">	
+			<table class="pub dataset">
+				<tr>
+					<th>IATI Registry Datasets <span class="note">Links open new window</span></th>
+					<th>Activities</th>
+				</tr>
+				{dash_list_slug_datas}
+			</table><table class="quality country_stats">
+				<tr>
+					<td>
+						<table class="country_data">
+							<tr>
+								<td>
+									<div class="country_title">Total recipient countries</div>
+									<div class="country_title">Total <i class="invalid">invalid</i> recipients</div>
+									<div class="country_title"><i class="invalid">Invalid</i> recipients percentage</div>
+								</td>
+								<td>
+									<div class="country_title">{dash_quality_country_count}</div>
+									<div class="country_title">{dash_quality_country_total_invalid}</div>
+									<div class="country_title">{dash_quality_country_total_invalid_pct}%</div>
+								</td>
+							</tr>
+							<tr>
+								<td colspan="2" class="no_border">
+									<div class="note div">Links below to XML open new window</div>
+								</td>
+							</tr>
+							<tr>
+								<th>Country Code</th>
+								<th>Activities</th>
+							</tr>
+							{dash_list_country_datas}
+						</table>
+					</td>
+				</tr>
+			</table>
+		</div>
 		<a href="#view=dash" class="back_link dash">Back to publisher list</a>
 	</div>
 </div>
 
 #css
+.default.more_data			{padding:0 20px; box-sizing:border-box;}
 a.back_link.dash			{color:#bdbdbd; margin-right:20px; margin-top:40px; text-align:right;}
 .note						{font-style:italic; font-weight:initial;}
-.note.div					{font-size:0.65em; line-height:1.2em; padding-top:5px;}
+.note.div					{font-size:0.65em; line-height:1.2em; padding-top:5px; text-align:left;}
 .country_subtitle			{font-size:1.4em; margin-top:10px; margin-bottom:10px;}
 
 table.quality		{border-collapse:separate; border-spacing:20px; margin:0 auto; width:960px; table-layout:fixed;}
@@ -166,17 +171,19 @@ table.quality td.act_invalid {background-color:#170d15;}
 table.quality td.act_trans 	 {background-color:#0d170d;}
 table.quality td.act_budget  {background-color:#1d0808;}
 
-table.country_data th				{border-bottom:1px solid #3d4363; font-size:0.9em; font-weight:bold; padding:30px 0 10px 0; text-align:left;}
+table.country_data th				{border-bottom:1px solid #3d4363; font-size:0.9em; font-weight:bold; padding:10px 0; text-align:left;}
 table.country_data th:last-child	{text-align:right;}
 table.country_data					{width:100%; border-collapse:collapse; border-spacing:20px; margin:0 auto;}
 table.country_data tr:first-child td, table.country_data td		{border:0; text-align:left;}
 table.country_data td					{background-color:initial; border-bottom:1px solid #3d4363; font-size:0.9em; padding:0px 40px 0px 0;}
-table.country_data td:last-child		{padding-right:5px; text-align:right; line-height:36px;}
-table.country_data td div.country_title	{font-size:1.8em; padding:10px 0 0 0;}
+table.country_data td:last-child		{padding-right:0px; text-align:right; line-height:36px;}
+table.country_data td div.country_title	{font-size:1.2em; padding:10px 0 0 0; line-height:22px;}
 table.country_data td:last-child div.country_title	{text-align:right;}
 table.country_data tr:last-child td		{border-bottom:0;}
 table.country_data td.cc				{padding:0;}
 table.country_data td.cc a				{display:block; padding:10px 30px 10px 0;}
+
+table.country_data td.no_border		{border:0; text-align:left;}
 
 table.actdate_data.country_data td	{line-height:46px;}
 
@@ -189,21 +196,26 @@ table.quality td.data_numbers		{background-color:initial;}
 table.name					{margin:0 auto; width:960px;}
 table.name td				{padding-bottom:20px; vertical-align:middle;}
 table.name tr:first-child td:first-child span	{display:block; font-size:0.7em; padding-top:5px; font-style:italic;}
-table.name td:first-child	{font-size:1.2em; width:20%;}
+table.name td:first-child	{font-size:1.2em; width:17%;}
 table.name td:nth-child(2)	{font-size:2.2em;}
 table.name td.visit			{padding:0px; text-align:center; vertical-align:top; width:200px;}
 table.name td.visit a		{display:block; background-color:#111738; color:#bdbdbd; padding:20px 0px; border-radius:6px;}
 
 table.pub td:last-child		{font-size:1.2em;}
 
-table.pub.dataset			{margin:0 auto; margin-bottom:40px; margin-top:40px; max-width:920px; width:920px;}
+table.pub.dataset			{margin:0 auto; margin-right:40px; width:380px;}
 table.pub.dataset td		{padding:5px 0;}
 table.pub.dataset td.set	{padding:0;}
 table.pub.dataset td.set a	{display:block; padding:5px 0;}
-table.pub.dataset th		{border-bottom:1px solid #3d4363; padding:5px 0;}
-table.pub.dataset th span.note	{display:inline-block; font-size:0.7em; padding-left:10px;}
+table.pub.dataset th		{font-size:1.4em; font-weight:bold; border-bottom:1px solid #3d4363; padding:5px 0;}
+table.pub.dataset th span.note	{display:inline-block; font-size:0.7em; padding:5px 0;}
+
+table.country_stats			{width:500px;}
+table.country_stats table.country_data	{width:460px;}
+
+table.pub.dataset, table.country_stats	{display:inline-block; vertical-align:top; margin-top:40px; border-spacing:unset;}
 
 table.actdate_data.country_data td:first-child, table.actdate_data.country_data th:first-child	{text-align:right; width:55%;}
-table.actdate_data.country_data th:first-child	{padding:30px 40px 0 0;}
+table.actdate_data.country_data th:first-child	{padding:10px 40px 0 0;}
 table.actdate_data.country_data td:last-child, table.actdate_data.country_data th:last-child	{text-align:left;}
 table.actdate_data.country_data td:last-child	{font-size:1.5em;}
