@@ -1,6 +1,7 @@
 Development Portal (2017-12-25 shi)
 ==============================
 Update DASH css
+Update dash_quality css
 
 
 Development Portal (2017-12-19 shi)
